Errores mecos roberto

--- a/Breaking Bad/nbproject/project.properties
+++ b/Breaking Bad/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Breaking_Bad.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.json-20180813.jar=C:\\Users\\rober\\Downloads\\json-20180813.jar
+file.reference.json-20180813.jar-1=C:\\Users\\ulise.DESKTOP-53APO1C\\Documents\\ITC Itesm\\4to Semestre\\Videojuegos\\json-20180813.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.json-20180813.jar}
+    ${file.reference.json-20180813.jar}:\
+    ${file.reference.json-20180813.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
